--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "keywords": [
     "API"
   ],
-  "author": "Duvan",
+  "author": "jsuazag",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
