--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tindercat-api",
   "version": "1.0.0",
-  "description": "Tinder Cat API",
+  "description": "Tindercat Api",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,11 +9,8 @@
     "dev": "npx nodemon index.js",
     "standard": "npx standard"
   },
-  "keywords": [
-    "API"
-  ],
-  "author": "jsuazag",
-  "license": "MIT",
+  "author": "Alexandra-Arias",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -21,7 +18,6 @@
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3",
     "standard": "^14.3.3"
   }
 }
