--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "npx nodemon index.js",
     "standard": "npx standard"
   },
-  "author": "Alexandra-Arias",
-  "license": "ISC",
+  "author": "Duvan",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
